# primehelix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SUBMISSION_CHECKLIST.md  compare_log_model.py  exact_lopsided_counts.py  fit_b_theta_dense_real.py  fit_convergence.py  fit_prefactor_drift.py  fit_theta_slopes_extended.py  glean_tenenbaum_snippets.sh  high_n_semiprime_sampler.py  lopsided.py  lopsided_convergence.py  multiplicative_phase_scan.py  plot_delta.py  plot_fit.py  plot_lopsided_convergence.py  plot_multi_theta.py  primehelix_lattice.py  primehelix_viz.py  pyproject.toml  requirements.txt  run_all.sh  sample_lopsided.py  theta_sweep.py  theta_sweep_csv.py  verify_loglogN_rate.py  verify_semiprime_tables.py  visualize_activation_thresholds.py  visualize_activation_thresholds_v2.py
.github/workflows/: ci.yml  publish.yml
datasets/: README.md  activation_steps.csv  clustering_results.json  compare_semiprime_1e6_halves.csv  compare_semiprime_1e7_halves.csv  literature_check_results.csv  multiplicative_phase_scan.csv  out.csv  semiprime_1e6_labels.csv  semiprime_1e7_labels.csv  semiprime_1e8_labels.csv  semiprime_1e9_labels.csv
paper/: Makefile  README.txt  cover_letter.tex  paper.tex  plots.py  references.bib
paper/drafts/: generated_tables.tex  paper2.tex  paper_backup_before_activation_figures.tex
primehelix/: analysis.py  cli.py  dickman.py  schema.py
primehelix/core/: ecm.py  factor.py  pm1.py  primes.py  qs.py  rho.py
primehelix/display/: ascii_helix.py  json_output.py  output.py  plots.py
primehelix/geometry/: bitbucket.py  coil.py  residue.py  tangent.py
primehelix/scan/: structure_summary.py  wheel.py
results/: conjecture1_extended.csv  subleading_fit.csv  subleading_models.csv  task1_table1.csv  task2_table2.csv  task3_table3.csv  task5_extended_table2.csv  task6_stabilisation.csv
scripts/: activation_steps.py  analyze_delta_shape.py  compare_offset_model.py  dickman_compare.py  extend_conjecture1.py  factor_ratio_spectral.py  fit_b_theta_dense.py  fit_b_theta_model.py  fit_theta_slopes.py  helix_factor_prediction_test.py  literature_check.py  manim_semiprime_lopsided.py  plot_activation_fixed.py  plot_multi_theta.py  plot_multi_theta_delta.py  plot_theta_curve_collapse.py  regenerate_tables.py  spectral_fingerprint.py  test_lopsided.py  theta_sweep_generate.py  verify_paper_tables.py  visualize_activation_thresholds_v2_badlabel_backup.py
tests/: test_compare_ranges.py  test_factor.py  test_golden_fixture.py  test_json_output.py  test_label_contract.py  test_public_contract.py  test_residue_profile.py  test_structure_scan.py
