[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primehelix"
version = "0.2.0"
description = "Unified console toolkit for prime number theory, factorization, and geometric number exploration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "gmpy2>=2.1",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "pytest-timeout", "matplotlib>=3.5"]

[project.scripts]
primehelix = "primehelix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["primehelix*"]
